# C-university-project

./: CMakeLists.txt
doc/: Doxyfile
doc/doc/html/: _arrow_8cpp.html  _arrow_8h.html  _arrow_8h_source.html  _border_8cpp.html  _border_8h.html  _border_8h_source.html  _brick_road_8cpp.html  _brick_road_8h.html  _brick_road_8h_source.html  _close_combat_8cpp.html  _close_combat_8h.html  _close_combat_8h_source.html  _distant_combat_8cpp.html  _distant_combat_8h.html  _distant_combat_8h_source.html  _fight_screen_8cpp.html  _fight_screen_8h.html  _fight_screen_8h_source.html  _fight_scren_8cpp.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _hero_8cpp.html  _hero_8h.html  _hero_8h_source.html  _house_8cpp.html  _house_8h.html  _house_8h_source.html  _house_left_one_8cpp.html  _house_left_one_8h.html  _house_left_one_8h_source.html  _house_left_two_8cpp.html  _house_left_two_8h.html  _house_left_two_8h_source.html  _house_right_one_8cpp.html  _house_right_one_8h.html  _house_right_one_8h_source.html  _house_right_two_8cpp.html  _house_right_two_8h.html  _house_right_two_8h_source.html  (+194 more)
doc/doc/latex/: _arrow_8cpp.tex  _arrow_8h.tex  _arrow_8h_source.tex  _border_8cpp.tex  _border_8h.tex  _border_8h_source.tex  _brick_road_8cpp.tex  _brick_road_8h.tex  _brick_road_8h_source.tex  _close_combat_8cpp.tex  _close_combat_8h.tex  _close_combat_8h_source.tex  _distant_combat_8cpp.tex  _distant_combat_8h.tex  _distant_combat_8h_source.tex  _fight_screen_8cpp.tex  _fight_screen_8h.tex  _fight_screen_8h_source.tex  _fight_scren_8cpp.tex  _game_8cpp.tex  _game_8h.tex  _game_8h_source.tex  _hero_8cpp.tex  _hero_8h.tex  _hero_8h_source.tex  _house_8cpp.tex  _house_8h.tex  _house_8h_source.tex  _house_left_one_8cpp.tex  _house_left_one_8h.tex  _house_left_one_8h_source.tex  _house_left_two_8cpp.tex  _house_left_two_8h.tex  _house_left_two_8h_source.tex  _house_right_one_8cpp.tex  _house_right_one_8h.tex  _house_right_one_8h_source.tex  _house_right_two_8cpp.tex  _house_right_two_8h.tex  _house_right_two_8h_source.tex  (+123 more)
res/: resources.json
res/shaders/: fSprite.txt  fragment.txt  vSprite.txt  vertex.txt
src/: main.cpp
src/Game/: AIcomponent.cpp  AIcomponent.h  Archer.cpp  Archer.h  Game.cpp  Game.h  Level.cpp  Level.h
src/Game/GameObject/: Archer.cpp  Archer.h  Arrow.cpp  Arrow.h  Border.cpp  Border.h  BrickRoad.cpp  BrickRoad.h  CloseCombat.cpp  CloseCombat.h  DistantCombat.cpp  DistantCombat.h  Hero.cpp  Hero.h  House.cpp  House.h  HouseLeftOne.cpp  (+11 more)
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/System/: Timer.cpp  Timer.h
test/: game-tests.cpp
(+98 files in other folders)
